Added Queries